--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	background: rgb(0, 0, 0);
+	background: linear-gradient(135deg, aqua, rgb(0, 255, 0), rgb(255, 255, 0), orange, red, rgb(255, 0, 234));
 	touch-action: none;
 }
 
